add config for env var
